Applied Three layered Architecture

--- a/Refactoring Commits/20F-0116_20F-0115_SCD_PROJECT/log.txt.5
+++ b/Refactoring Commits/20F-0116_20F-0115_SCD_PROJECT/log.txt.5
@@ -14,3 +14,5 @@ Dec 13, 2022 12:42:16 PM dataBaseLayer.DataBaseLayer getWordForViewingInTable
 INFO: Info message: Read Data of Word table from DB
 Dec 31, 2022 9:02:24 PM dataAccessLayer.DataBaseLayer getWordForViewingInTable
 INFO: Info message: Read Data of Word table from DB
+Jan 02, 2023 12:04:17 AM dataAccessLayer.DataBaseLayer getWordForViewingInTable
+INFO: Info message: Read Data of Word table from DB
