--- a/Refactoring Commits/20F-0116_20F-0115_SCD_PROJECT/log.txt.2
+++ b/Refactoring Commits/20F-0116_20F-0115_SCD_PROJECT/log.txt.2
@@ -26,3 +26,11 @@ Dec 31, 2022 9:02:23 PM dataAccessLayer.DataBaseLayer manipulateWord
 INFO: Info message: Deleted word in word table
 Dec 31, 2022 9:02:24 PM dataAccessLayer.DataBaseLayer getWordForViewingInTable
 INFO: Info message: Read Data of Word table from DB
+Jan 02, 2023 12:04:14 AM dataAccessLayer.DataBaseLayer manipulateWord
+INFO: Info message: Updated word in word table
+Jan 02, 2023 12:04:14 AM dataAccessLayer.DataBaseLayer getWordForViewingInTable
+INFO: Info message: Read Data of Word table from DB
+Jan 02, 2023 12:04:17 AM dataAccessLayer.DataBaseLayer manipulateWord
+INFO: Info message: Deleted word in word table
+Jan 02, 2023 12:04:17 AM dataAccessLayer.DataBaseLayer getWordForViewingInTable
+INFO: Info message: Read Data of Word table from DB
