Added assert and Rename field Refactoring and added new Test cases

--- a/Refactoring Commits/20F-0116_20F-0115_SCD_PROJECT/log.txt.2
+++ b/Refactoring Commits/20F-0116_20F-0115_SCD_PROJECT/log.txt.2
@@ -34,3 +34,11 @@ Jan 02, 2023 12:04:17 AM dataAccessLayer.DataBaseLayer manipulateWord
 INFO: Info message: Deleted word in word table
 Jan 02, 2023 12:04:17 AM dataAccessLayer.DataBaseLayer getWordForViewingInTable
 INFO: Info message: Read Data of Word table from DB
+Jan 03, 2023 9:19:53 PM dataAccessLayer.DataBaseLayer manipulateWord
+INFO: Info message: Updated word in word table
+Jan 03, 2023 9:33:12 PM dataAccessLayer.DataBaseLayer manipulateWord
+INFO: Info message: Updated word in word table
+Jan 03, 2023 9:33:20 PM dataAccessLayer.DataBaseLayer manipulateWord
+INFO: Info message: Updated word in word table
+Jan 03, 2023 9:40:01 PM dataAccessLayer.DataAccessLayer manipulateWord
+INFO: Info message: Updated word in word table
