--- a/20F-0116_20F-0115_SCD_PROJECT_new_version/SCD_PROJECT_USE_CASE_1/log.txt.2
+++ b/20F-0116_20F-0115_SCD_PROJECT_new_version/SCD_PROJECT_USE_CASE_1/log.txt.2
@@ -42,3 +42,7 @@ Jan 03, 2023 9:33:20 PM dataAccessLayer.DataBaseLayer manipulateWord
 INFO: Info message: Updated word in word table
 Jan 03, 2023 9:40:01 PM dataAccessLayer.DataAccessLayer manipulateWord
 INFO: Info message: Updated word in word table
+Jan 03, 2023 10:12:36 PM dataAccessLayer.DataAccessLayer manipulateWord
+INFO: Info message: Deleted word in word table
+Jan 03, 2023 10:12:36 PM dataAccessLayer.DataAccessLayer getWordForViewingInTable
+INFO: Info message: Read Data of Word table from DB
