--- a/20F-0116_20F-0115_SCD_PROJECT_new_version/SCD_PROJECT_USE_CASE_1/log.txt.3
+++ b/20F-0116_20F-0115_SCD_PROJECT_new_version/SCD_PROJECT_USE_CASE_1/log.txt.3
@@ -28,3 +28,15 @@ Jan 02, 2023 12:04:17 AM dataAccessLayer.DataBaseLayer getWordForViewingInTable
 INFO: Info message: Read Data of Word table from DB
 Jan 03, 2023 10:12:36 PM dataAccessLayer.DataAccessLayer getWordForViewingInTable
 INFO: Info message: Read Data of Word table from DB
+Jan 03, 2023 10:22:00 PM dataAccessLayer.DataAccessLayer getWordForViewingInTable
+INFO: Info message: Read Data of Word table from DB
+Jan 03, 2023 10:22:05 PM dataAccessLayer.DataAccessLayer manipulateWord
+INFO: Info message: Deleted word in word table
+Jan 03, 2023 10:22:05 PM dataAccessLayer.DataAccessLayer getWordForViewingInTable
+INFO: Info message: Read Data of Word table from DB
+Jan 03, 2023 10:34:58 PM dataAccessLayer.DataAccessLayer getWordForViewingInTable
+INFO: Info message: Read Data of Word table from DB
+Jan 03, 2023 10:35:00 PM dataAccessLayer.DataAccessLayer manipulateWord
+INFO: Info message: Deleted word in word table
+Jan 03, 2023 10:35:00 PM dataAccessLayer.DataAccessLayer getWordForViewingInTable
+INFO: Info message: Read Data of Word table from DB
