--- a/20F-0116_20F-0115_SCD_PROJECT_new_version/SCD_PROJECT_USE_CASE_1/log.txt.7
+++ b/20F-0116_20F-0115_SCD_PROJECT_new_version/SCD_PROJECT_USE_CASE_1/log.txt.7
@@ -6,3 +6,7 @@ Dec 11, 2022 10:21:42 PM dataBaseLayer.DataBaseLayer manipulateWord
 INFO: Info message: Deleted word in word table
 Dec 11, 2022 10:21:42 PM dataBaseLayer.DataBaseLayer getWordForViewingInTable
 INFO: Info message: Read Data of Word table from DB
+Jan 03, 2023 10:36:17 PM main.MainClass main
+WARNING: Warning message
+Jan 03, 2023 10:36:18 PM main.MainClass main
+SEVERE: Server message
